Closed Bug 1181467 Opened 10 years ago Closed 10 years ago

Can not copy/paste images to other applications

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla42
Tracking Status
firefox42 --- fixed

People

(Reporter: boris, Assigned: boris)

References

Details

Attachments

(1 file)

Cannot copy image from the browser into other applications on my MacOS and Ubuntu(gtk) based on current nightly build. (I think windows also has this problem.) Reason: We set kNativeImageMime type whiling copying image on the browser (https://dxr.mozilla.org/mozilla-central/source/dom/base/nsCopySupport.cpp#452) , but ContentParent::RecvSetClipboard() didn't handle this case correctly, so nsClipboard::SetData() cannot get the imgIContainer successfully on gtk/cocoa/qt...
Assignee: nobody → boris.chiou
Status: NEW → ASSIGNED
Depends on: 1169268
Depends on: 1176447
No longer depends on: 1169268
Component: DOM: Core & HTML → DOM
Summary: Fix mime type checking whiling copying image → Fix mime type checking while copying image
Handle kNativeImageMime case as other image types in RecvSetClipboard.
Attachment #8630908 - Flags: review?(enndeakin)
Blocks: 952456
Summary: Fix mime type checking while copying image → Can not copy/paste images onto other applications.
Summary: Can not copy/paste images onto other applications. → Can not copy/paste images to other applications.
Summary: Can not copy/paste images to other applications. → Can not copy/paste images to other applications
Attachment #8630908 - Flags: review?(enndeakin) → review+
Keywords: checkin-needed
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla42
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: