Bug 1181467 - Fix mime type checking while copying image. r=Enn

Handle kNativeImageMime case as other image types in RecvSetClipboard.